# iv-q4-birdclef-2024

./: .deepsource.toml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  README.md  cv.py  kaggle_requirements.txt  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  submit.py  train.py
conf/: cv.yaml  submit.yaml  train.yaml
conf/best/: convnext-post-power-2-lb.yaml
conf/ensemble/: conveca.yaml  final.yaml  first.yaml  second.yaml  timed.yaml
conf/ensemble/old/: alternating.yaml  first.yaml  timed.yaml
conf/model/: 2stage-submit.yaml  alternate-ensemble-k4o2zfhf-tgjga2tg.yaml  alternate-ensemble-model.yaml  alternate-ensemble.yaml  alternate-ensemble[pry46jiv,uubbpt64].yaml  ancient-rain-721.yaml  atto-back.yaml  atto.yaml  aug.yaml  b0_aug.yaml  b0_aug_sampled.yaml  b0_aug_weighted.yaml  b4-base.yaml  b4-wide.yaml  best_2024_kenya.yaml  convnext tiny.yaml  convnext-bs256.yaml  convnext-esc50.yaml  convnext-green.yaml  convnext-mfcc-sumix.yaml  convnext-norm.yaml  convnext-post-10-epochs.yaml  convnext-post-10s.yaml  convnext-post-2024-google.yaml  convnext-post-2024google-silences-birds.yaml  convnext-post-add.yaml  convnext-post-alone-add.yaml  convnext-post-ema.yaml  convnext-post-family.yaml  convnext-post-focal.yaml  convnext-post-freefield.yaml  convnext-post-google.yaml  convnext-post-mfcc-sumix.yaml  convnext-post-mfcc.yaml  convnext-post-ormix.yaml  convnext-post-power-2.yaml  convnext-post-scale.yaml  convnext-post.yaml  convnext.yaml  double_loss_model.yaml  (+41 more)
conf/model/ablation/: emiel1.yaml  emiel2.yaml  hugo.yaml  jeffrey1.yaml  jeffrey2.yaml  tolga.yaml
conf/model/old/: 2stage-submit.yaml  alternate-ensemble-k4o2zfhf-tgjga2tg.yaml  aug.yaml  b0_aug_weighted.yaml  best_2024_kenya.yaml  conv_aug_weighted.yaml  convnext-2023-green-kenya.yaml  convnext-post-2023-2024.yaml  convnext-post-multiply-mean.yaml  convnext-post.yaml  convnext-tiny.yaml  convnext.yaml  convnextv2-atto-median-spec-2ch.yaml  convnextv2-atto-median-spec.yaml  convnextv2-atto.yaml  convnextv2-femto.yaml  double_loss_model.yaml  eca_l0-a4.yaml  eca_l0_dropout.yaml  effb0.yaml  fdy_sed.yaml  resnet34-ensemble-alt.yaml  timm.txt  visformer-freefield-best.yaml
conf/sweep/: swisssweep.yaml  twostage.yaml  visformer.yaml
conf/wandb/: submit.yaml
data/: fix_train_audio_primary_labels.py
data/raw/: main.py
data/raw/2024/: .gitkeep
docs/working_note/: README.md  bibliography.bib  main.tex
docs/working_note/copyright/: Copyright
notebook/: spec_noise_scales.ipynb
notebooks/: 2024_metadata_add_datetime.ipynb  additional_2024_convert_metadata.ipynb  analyze_google_kd.ipynb  audio_compare.ipynb  avg_recorder_location.ipynb  butter.ipynb  convert_esc50.ipynb  convert_metadata.ipynb  convert_zenodo_23.ipynb  create_noise.ipynb  freefield_exploration.ipynb  gen_background.ipynb  google-bird-model-kd.py  google-bird-model-psuedo-label.py  inspect_ground_truth.ipynb  manual-shift.ipynb  nocall_2021.ipynb  onboarding_notebook.ipynb  prepare_2024google.yaml.ipynb  process_new_dataset.py  scrape_xeno_canto.ipynb  spec_noise_scales.ipynb  taxonomy.ipynb  test  unlabelled_segment_energies.pkl  vizualise_submission.ipynb
notebooks/convert/: convert2020_2021.ipynb  convert_metadata.ipynb  convert_zenodo_20.ipynb  convert_zenodo_21.ipynb  convert_zenodo_22.ipynb  convert_zenodo_23.ipynb  prepare_2024google.yaml.ipynb
src/config/: cv_config.py  submit_config.py  train_config.py
src/scoring/: accuracy.py  double_headed_rocauc_years.py  rocauc.py  rocauc_years.py  scorer.py
src/setup/: setup_data.py  setup_pipeline.py  setup_runtime_args.py  setup_wandb.py  splitter.py
src/typing/: typing.py
src/utils/: lock.py  recursive_repr.py  set_torch_seed.py  timer.py  to_submission_format.py
submission/: conv.csv  conveca.csv  download_models.py  manage_datasets.py
submission/config/: dependencies.json  source.json
tm/: cfd080d568b9341fa9b02decb0e59ae1_0.pt
wandb/sweep-e5az3evl/: config-1spgpk6j.yaml  config-4bnp80fj.yaml  config-clvmd7v3.yaml  config-dpqndxfk.yaml  config-e9or4bn6.yaml  config-hfno5d9e.yaml  config-lday0wr1.yaml
wandb/sweep-idfvhh1o/: config-5pc851a9.yaml  config-5s8egn0c.yaml  config-6hjodo96.yaml  config-7f346n99.yaml  config-7s4c2vcw.yaml  config-9kspa88w.yaml  config-bafdqm07.yaml  config-bens4xkl.yaml  config-e4diw02p.yaml  config-emf3337e.yaml  config-ezcgq5ss.yaml  config-i46jp8p7.yaml  config-j7mur9hc.yaml  config-kiyqx0ts.yaml  config-mxt6dj66.yaml  config-s7fpjota.yaml  config-u4d2073l.yaml  config-v8tkvnvp.yaml  config-yxl8tci2.yaml
(+73 files in other folders)
