[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dashboard", "external", "src", "cv", "run_dashboard", "submit", "train"]

[project]
name = "q4-bird-clef"
version = "0.0.1"
authors = [
    { name = "Emiel Witting", email = "emiel.witting@gmail.com"},
    { name = "Jeffrey Lim", email = "jeffrey-lim@outlook.com" },
    { name = "Hugo de Heer", email = "hugodeheer1234@gmail.com"},
    { name = "Tolga Kopar", email = "cahittolgakopar@gmail.com" },
    { name = "Kristóf Sándor", email = "Emherk512@gmail.com" },
]
description = "Team Epoch's base application for competing in machine learning competitions"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "tqdm>=4.60.0",
    "epochalyst>=0.3.2",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.2",
    "plotly>=5.18.0",
    "torch==2.2.2+cu121",
    "torchvision==0.17.2+cu121",
    "torchaudio==2.2.2+cu121",
    "dask>=2024.4.0",
    "dask-expr>=1.0.12",
    "typing_extensions>=4.9.0",
    "annotated-types>=0.6.0",
    "hydra-core>=1.3.2",
    "wandb>=0.16.2",
    "randomname>=0.2.1",
    "coloredlogs>=15.0.1",
    "librosa>=0.10.1",
    "onnx>=1.16.0",
    "onnxruntime>=1.17.3",
    "kornia>=0.7.2",
    "timm>=0.9.16",
]

[tool.rye]
managed = true
lock-with-sources = true
dev-dependencies = [
    "pre-commit>=3.7.0",
    "notebook>=7.0.6",
    "jupyter>=1.0.0",
    "ipykernel>=6.27.1",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "kaggle>=1.6.12",
    "xeno-canto>=3.0",
]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/torch_stable.html"
type = "find-links"
